Task14/mern/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: yurakorabel.dynv6.net
    http:
      paths:
      - path: /mongodb
        pathType: Prefix
        backend:
          service:
            name: mongodb
            port:
              number: 27017
  - host: yurakorabel.dynv6.net
    http:
      paths:
      - path: /express
        pathType: Prefix
        backend:
          service:
            name: express-app-node
            port:
              name: http
  - host: yurakorabel.dynv6.net
    http:
      paths:
      - path: /react
        pathType: Prefix
        backend:
          service:
            name: react-app-node
            port:
              name: http
